[package]
name = "ntfs"
version = "0.4.0"
authors = ["Colin Finck <colin@reactos.org>"]
description = "A low-level NTFS filesystem library"
homepage = "https://github.com/ColinFinck/ntfs"
repository = "https://github.com/ColinFinck/ntfs"
documentation = "https://docs.rs/ntfs"
readme = "README.md"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "nt", "ntfs", "windows"]
categories = ["filesystem", "no-std", "os::windows-apis", "parser-implementations"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.10.0"
chrono = { version = "0.4.42", default-features = false, optional = true }
derive_more = { version = "2.1.1", default-features = false, features = ["display", "from"] }
enumn = "0.1.14"
memoffset = "0.9.1"
nt-string = { version = "0.1.1", features = ["alloc"], default-features = false }
strum_macros = "0.27.2"
thiserror = { version = "2.0.17", default-features = false }
time = { version = "0.3.45", features = ["large-dates", "macros"], default-features = false, optional = true }
zerocopy = { version = "0.8.33", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.100"
time = { version = "0.3.45", features = ["formatting", "large-dates", "macros"], default-features = false }

[features]
default = ["std"]
std = ["arrayvec/std", "chrono?/std", "nt-string/std", "thiserror/std", "time?/std", "zerocopy/std"]

[[example]]
name = "ntfs-shell"
required-features = ["time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
